Modifique consulta SQL para que muestre prod activos solamente

--- a/src/views/actualizar.ejs
+++ b/src/views/actualizar.ejs
@@ -123,8 +123,8 @@
 
                         <label for="activo"> Activo </label>
                         <select name="activo" id="activo" required>
-                            <option value="true">Si</option>
-                            <option value="false">No</option>
+                            <option value="1">Si</option>
+                            <option value="0">No</option>
                         </select>
 
                         <label for="imagenProd">Imagen</label>
