--- a/src/views/crear.ejs
+++ b/src/views/crear.ejs
@@ -23,8 +23,8 @@
 
                     <label for="activoProd">Activo</label>
                     <select name="activo" id="activoProd" required>
-                        <option value="true">Sí</option>
-                        <option value="false">No</option>
+                        <option value="1">Sí</option>
+                        <option value="0">No</option>
                     </select>
 
                     <label for="imagenProd">Imagen</label>
