--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -6,5 +6,6 @@
         <li><a href="/dashboard/crear">CREAR</a></li>
         <li><a href="/dashboard/actualizar">MODIFICAR</a></li>
         <li><a href="/dashboard/eliminar">ELIMINAR</a></li>
+        <li><a href="/api/productos">API</a></li>
     </ul>
 </div>
